examples/v0.3/errors/index_out_of_bounds.nova
/*
Expected Error

Array index out of bounds.
*/

numbers: [N] = [
    1,
    2,
    3
]

print(numbers[99])